# superperm

./: .gitignore  CMakeLists.txt  superperm.code-workspace
ChaffinMethod/: CMakeLists.txt
CppDCM/: CMakeLists.txt  CSpdlog.h  CppDCM.cpp  DCM_Ascii.h  DCM_Client.cpp  DCM_Client.h  DCM_Task.h  DCM_TaskRunner.h  DCM_calc.cpp  DCM_calc.h  DCM_static.cpp  DCM_static.h
DistributedChaffinMethod/: CMakeLists.txt
